some more dataset correction hotfixes

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,5 @@
 __pycache__
 django_ngq/db.sqlite3
 fine_tuning/fine_tuning_cycles
-fine_tuning/cycle-1
-fine_tuning/cycle-2
+fine_tuning/datasets
 django_ngq/.env
