--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ django_ngq/db.sqlite3
 fine_tuning/fine_tuning_cycles
 fine_tuning/datasets
 django_ngq/.env
+django_ngq/ngq_app/templates/ngq_app/to-delete
